FIX too wide home page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 .m-auto {
-    width: 1080px;
     margin: auto;
 }
 
